--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,28 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem you created using chatGPT of 20 to 30 lines,here!-->
+
+In the realm of flavors, where fruits and dreams unite,  
+Lies the world of smoothies, a pure and vibrant delight.  
+With every blend and whir, a symphony of taste,  
+A rainbow in a glass, a culinary embrace.  
+
+From berries bursting with sweetness, to bananas creamy   and mild,  
+Nature's bounty blended, a creation reconciled.  
+Mango's tropical kiss, and pineapple's golden song,  
+In this swirling concoction, we all truly belong.  
+  
+Spinach, kale, and greens, in a healthy, vibrant blend,  
+Nourishing our bodies, a trend that will not end.  
+Add a splash of almond milk, or yogurt's gentle embrace,  
+Smoothies are a canvas, a nutritious and tasty space.  
+  
+Chia seeds for texture, a sprinkle of nuts on high,  
+A smoothie's not just a drink; it's a canvas to the sky.  
+For breakfast or a snack, a pick-me-up, a treat,  
+Smoothies are the answer, a palate's joy complete.  
+  
+In the heat of summer, or a winter's frosty day,  
+A smoothie knows no season; it's welcome all the way.  
+So let's raise our glasses, to this blend of joy and   health,  
+In the world of smoothies, we find pure liquid wealth.  
